# cmake-setup

./: .gitignore  CMakeLists.txt  GDBandVimNote.md  README.md  errorNotes.md
multiply/: CMakeLists.txt  addition.cpp  addition.h  area.cpp  area.h  arh.cpp  arh.h  bitTesting.cpp  bitTesting.h  bitstruct.h  chronoTest.cpp  chronoTest.h  combineTwoClass.h  main.cpp  msgTest.cpp  msgTest.h  multiply.cpp  multiply.h  multiplyhelper.cpp  multiplyhelper.h  rMsgStruct.h  singletonTest.cpp  singletonTest.h
tests/: CMakeLists.txt  addition_test.cpp  multiply_test.cpp
